# odesteer

./: .gitignore  README.md  pyproject.toml
confs/: detox.yaml  truthfulqa.yaml  ultrafeedback.yaml
confs/steer/: CAA.yaml  ITI.yaml  LinAcT.yaml  MiMiC.yaml  NoSteer.yaml  ODESteer.yaml  RepE.yaml  StepODESteer.yaml
data/: toxicity.sh  truthfulqa.sh  ultrafeedback.sh
data/toxicity/: extract_activations.py  format_dataset.py  preprocess_jigsaw.py  preprocess_rtp.py
data/truthfulqa/: extract_activations.py  format_dataset.py
data/ultrafeedback/: extract_activations.py  format_dataset.py
scripts/toxicity/: detox_eval.py  detox_generate.py
scripts/truthfulqa/: truthfulqa_eval.py  truthfulqa_generate.py
scripts/ultrafeedback/: ultrafeedback_eval.py  ultrafeedback_generate.py
src/odesteer/lm/: __init__.py  _config.py  _huggingface_lm.py
src/odesteer/steer/: __init__.py  _base_steer.py  _caa.py  _iti.py  _lin_act.py  _mimic.py  _ode_steer.py  _repe.py  _step_ode_steer.py
src/odesteer/utils/: __init__.py  data.py  metric.py
src/odesteer/utils/kernels/: __init__.py
