[project]
name = "odesteer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "deepeval>=3.4.2",
    "ecos>=2.0.14",
    "ema-pytorch>=0.7.7",
    "emd>=0.8.1",
    "flashinfer-python>=0.2.6.post1",
    "google-api-python-client>=2.185.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "kaggle>=1.7.4.5",
    "lightning>=2.5.1.post0",
    "linear-operator>=0.6",
    "matplotlib>=3.10.3",
    "multipledispatch>=1.0.0",
    "nnsight>=0.4.6",
    "numpy>=1.26.4",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pot>=0.9.5",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.2.2",
    "tiktoken>=0.11.0",
    "torch>=2.6.0",
    "torchdiffeq>=0.2.5",
    "transformers>=4.52.4",
]

[project.scripts]
odesteer = "odesteer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
